--- a/Project1/requirements.txt
+++ b/Project1/requirements.txt
@@ -2,9 +2,12 @@ numpy==1.24.3
 matplotlib==3.7.2
 scikit-learn==1.3.0
 torch==2.3.1
-torchvision==0.18.1a0
+torchvision==0.18.1
 pillow==10.0.0
 seaborn==0.12.2
 pandas==2.0.3
 joblib==1.3.1
 tqdm==4.66.1 
+scikit-image==0.25.2
+umap-learn==0.5.7
+opencv-python==4.11.0.86
